--- a/_config.yml
+++ b/_config.yml
@@ -14,25 +14,23 @@ author: Fábio Madeira
 # jekyller.github.io - all contents run on /vitae/
 # for a normal use at the base of the server change it to "/"
 baseurl: /vitae/
-title: Chris Turner's Resume
-name: Chris Turner
-email: christurner@me.com
+title: mztanim's Resume
+name: Moniruzzaman Tanim
+email: mztanim@gmail.com
 email_full: mailto:youremail@me.com
 website: github.io/sustain
 website_full: https://jekyller.github.io/sustain
 github: trending
 twitter: twitter
-tel: +44 0000 000000
+tel: +358 408085786
 tel_full: tel:+440000000000
-google_maps: 'https://www.google.co.uk/maps/place/44+Perth+St,+Edinburgh,+Edinburgh+City+EH3+5BL'
+google_maps: 'https://goo.gl/maps/ZzirSTybUNP8CGkf9'
 address:
-  street: 44 Perth Street
-  postcode: EH3 5BL
-  city: Edinburgh
-  country: United Kingdom
+  street: Isosaarentie 4 D
+  postcode: 00840
+  city: Helsinki
+  country: Finland
 google_analytics: UA-69300817-1
 
 # needed for travis-ci build
 exclude: [vendor]
-
-theme: jekyll-theme-cayman
