--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ author: Fábio Madeira
 # edit this section with your information
 # jekyller.github.io - all contents run on /vitae/
 # for a normal use at the base of the server change it to "/"
-baseurl: /vitae/
+baseurl: /CV/
 title: mztanim's Resume
 name: Moniruzzaman Tanim
 email: mztanim@gmail.com
