--- a/_config.yml
+++ b/_config.yml
@@ -15,13 +15,13 @@ author: Fábio Madeira
 # for a normal use at the base of the server change it to "/"
 baseurl: /CV/
 title: mztanim's Resume
-name: Moniruzzaman Tanim
+name: Md M Zaman Tanim
 email: mztanim@gmail.com
 email_full: mailto:youremail@me.com
-website: github.io/sustain
-website_full: https://jekyller.github.io/sustain
+website: github.io/mztanim
+website_full: https://github.com/mztanim
 github: trending
-twitter: twitter
+LinkedIn: http://fi.linkedin.com/in/mdmzaman
 tel: +358 408085786
 tel_full: tel:+440000000000
 google_maps: 'https://goo.gl/maps/ZzirSTybUNP8CGkf9'
